add client load

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -37,6 +37,6 @@ const { title, description } = Astro.props;
   </head>
   <body>
     <slot />
-    <Analytics />
+    <Analytics client:load />
   </body>
 </html>
