--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import "../../styles/fonts.css";
 import "../../styles/globals.css";
 import MyFace from "../../static/imgs/my_face.png";
-import { Analytics } from "@vercel/analytics/react";
+import Analytics from "@vercel/analytics/astro";
 
 interface Props {
   title: string;
